--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ h1 {
   text-align: center;
   font-size: 120px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
-  color: #147df5;
+  color: #ffffff;
   -webkit-text-stroke: 2px black;
   margin-bottom: 10px;
 }
@@ -30,7 +30,7 @@ h2 {
   margin-bottom: 5px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
   font-size: 30px;
-  color: #147df5;
+  color: #ffffff;
   -webkit-text-stroke: 1px black;
 }
 
@@ -44,7 +44,7 @@ h2 {
 
 #timer{
   color: #147df5;
-  -webkit-text-stroke: 2px black;
+  -webkit-text-stroke: 2px #fff;
 }
 
 .grid {
@@ -53,7 +53,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
-  cursor: url("../assets/mallett.png"), pointer;
+  cursor: url("https://github.com/Cenriquez23/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/assets/mallett.png"), pointer;
 }
 
 .hole {
@@ -127,14 +127,15 @@ h2 {
   width: 500px;
   height: 1em;
   font-size: 30px;
-  color: #5390d9;
+  background-color: #5390d9;
+  color: #fff;
 }
 
 #easyLevel,
 #normalLevel,
 #hardLevel {
   background-color: #5390d9;
-  color: #000000;
+  color: #fff;
   font-size: 20px;
   font-family: "Lucida Bright", "Comic Sans";
 }
