--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ h1 {
   text-align: center;
   font-size: 120px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
-  color: #ffffff;
+  color: #147df5;
   -webkit-text-stroke: 2px black;
   margin-bottom: 10px;
 }
@@ -29,8 +29,8 @@ h2 {
   margin-top: 1px;
   margin-bottom: 5px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
-  font-size: 30px;
-  color: #ffffff;
+  font-size: 40px;
+  color: #147df5;
   -webkit-text-stroke: 1px black;
 }
 
@@ -127,7 +127,6 @@ h2 {
   width: 500px;
   height: 1em;
   font-size: 30px;
-  background-color: #5390d9;
   color: #fff;
 }
 
