--- a/src/styles.css
+++ b/src/styles.css
@@ -19,8 +19,8 @@ h1 {
   text-align: center;
   font-size: 120px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
-  color: #147df5;
-  -webkit-text-stroke: 2px black;
+  color: #0aefff;
+  -webkit-text-stroke: 2px #8900f2;
   margin-bottom: 10px;
 }
 
@@ -30,21 +30,21 @@ h2 {
   margin-bottom: 5px;
   font-family: "Lucida Bright", "Comic Sans", cursive;
   font-size: 40px;
-  color: #147df5;
-  -webkit-text-stroke: 1px black;
+  color: #0aefff;
+  -webkit-text-stroke: 1px #8900f2;
 }
 
 #start {
-  background-color: #5390d9;
+  background-color: #0aefff;
   text-align: center;
   font-size: 30px;
-  color: black;
+  color: #8900f2;
   font-family: "Lucida Bright", "Comic Sans";
 }
 
 #timer{
-  color: #147df5;
-  -webkit-text-stroke: 2px #fff;
+  color: #0aefff;
+  -webkit-text-stroke: 2px #8900f2;
 }
 
 .grid {
@@ -53,7 +53,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
-  cursor: url("https://github.com/Cenriquez23/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/assets/mallett.png"), pointer;
+  cursor: url("../assets/mallett.png"), pointer;
 }
 
 .hole {
@@ -127,14 +127,15 @@ h2 {
   width: 500px;
   height: 1em;
   font-size: 30px;
-  color: #fff;
 }
 
-#easyLevel,
-#normalLevel,
-#hardLevel {
-  background-color: #5390d9;
-  color: #fff;
+#easySelector,
+#normalSelector,
+#hardSelector {
+  background-color: #0aefff;
+  text-align: center;
+  color: #8900f2;
   font-size: 20px;
   font-family: "Lucida Bright", "Comic Sans";
+  font-size: 20px;
 }
